# tetris2021

./: .gitignore  LICENSE  TETRIS.py  draw.py  game.py  main.py  network.py  pyproject.toml  readme.md  server.py  shapes.py  tetris.py
example/: alpha_ex.py  server.py
example/moving_square/: moving_square.py  sample_client.py  server.py
example/pyame_alpha/: alpha_ex.py
example/simple_chat/: client.py  server.py
example/tetris/: draw.py  file.py  game.py  network.py  settings.py  tetris.py
multiplay/: network.py  server.py
multiplay/networkTutrorial/: game.py  network.py  server.py
tetris2024/: game_loop.py
tetris2024/core/: game.py  randomizer.py  tetromino_queue.py
tetris2024/graphic/: renderer.py
tetris2024/io/: input_event_queue.py  tk_manager.py  ui_manager.py
vscode/: game.py  pygame1.py  sample_client.py  sample_server.py  test.py
